[docs] 📚 CLI and Acess

--- a/2.iam-and-aws-cli.md
+++ b/2.iam-and-aws-cli.md
@@ -2,7 +2,8 @@
 - Identity and Acess Management - Global Service.
 - Users are people within your organization, and can be grouped.
 - Groups only contain users.
-- Users don't have to belong to a group, and user can belong to multiple groups.
+- Users don't have to belong to a group, and a user can belong to multiple groups.
+---
 ### Permissions
 - Users or groups can be assigned JSON documents called policies.
 - These policies define the **permissions** of the user
@@ -21,3 +22,38 @@
 - **Action:** List of actions this policy allows or denies.
 - **Resource:** List of resources to which the actions applied to.
 - **Condition (optional):** Conditions for when this policy is in effect.
+---
+## MFA Overview
+### Virtual MFA Device
+- Google Authenticator.
+- Authy.
+### Universal 2nd Factor (U2F) Security Key
+- YubiKey by Yubico (3rd party)
+### Hardware Key Fob MFA Device
+- Gemalto (3rd party)
+### Hardware Key Fob MFA Device AWS Gov (US)
+- SurePassID (3rd party)
+---
+## Access Keys, CLI and SDK
+### There is 3 options to acess AWS:
+- Management Console: password + MFA.
+- Command Line Interface (CLI): Acess keys.
+- Software Developer Kit (SDK): Acess keys.
+
+- Acess keys are generated through the console.
+- Users manage their own acess keys.
+- **Acess keys must be secret protected, just like a password.**
+### CLI
+- Let's us interact with AWS services using commands in our command-line shell.
+- Direct acess to the public API of AWS services.
+- We can develop scripts to manage our resources.
+- It's open-source.
+- Alternative to using the Management Console.
+### SDK
+- Language-specific APIs (set of libraries)
+- Enable us to acess and manage services programatically.
+- Embedded within our application.
+- Supports
+	- JavaScript, Python, PHP, .NET, Ruby, Java, Go, Node.js, C++
+	- Mobile: Android, IOS
+	- IoT Devices: Embedded C, Arduino
