--- a/2.iam-and-aws-cli.md
+++ b/2.iam-and-aws-cli.md
@@ -3,8 +3,8 @@
 - Users are people within your organization, and can be grouped.
 - Groups only contain users.
 - Users don't have to belong to a group, and a user can belong to multiple groups.
----
-### Permissions
+
+## Permissions
 - Users or groups can be assigned JSON documents called policies.
 - These policies define the **permissions** of the user
 - In AWS you apply the **least privilege principle**: don't give more permissions than a user needs.
@@ -22,7 +22,7 @@
 - **Action:** List of actions this policy allows or denies.
 - **Resource:** List of resources to which the actions applied to.
 - **Condition (optional):** Conditions for when this policy is in effect.
----
+
 ## MFA Overview
 ### Virtual MFA Device
 - Google Authenticator.
@@ -33,14 +33,13 @@
 - Gemalto (3rd party)
 ### Hardware Key Fob MFA Device AWS Gov (US)
 - SurePassID (3rd party)
----
+
 ## Access Keys, CLI and SDK
 ### There is 3 options to acess AWS:
 - Management Console: password + MFA.
 - Command Line Interface (CLI): Acess keys.
 - Software Developer Kit (SDK): Acess keys.
-
-- Acess keys are generated through the console.
+### Acess keys are generated through the console.
 - Users manage their own acess keys.
 - **Acess keys must be secret protected, just like a password.**
 ### CLI
